--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@ description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://knot.nl" # the base hostname & protocol for your site
+baseurl: "/knot/" # the subpath of your site, e.g. /blog/
+url: "http://gerbyzation.nl" # the base hostname & protocol for your site
 twitter_username: jekyllrb
 github_username:  jekyll
 
