added action to form

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: KNOT
-subtitle: Kees Neven Ontwikkeling en Training
+subtitle: Kees Neven Ontwikkelt Toekomst
 email: info@knot.consulting
 description: > # this means to ignore newlines until "baseurl:"
   KNOT is een consulting en trainingbureau en helpt u om uw identiteit, 
@@ -8,8 +8,8 @@ description: > # this means to ignore newlines until "baseurl:"
   bereikbare doelen en de hindernissen op uw pad te overwinnen.
 baseurl: "/" # the subpath of your site, e.g. /blog/
 url: "http://www.knot.consulting" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+# twitter_username: jekyllrb
+# github_username:  jekyll
 
 # Build settings
 markdown: kramdown
