removed (base)url references from index.html

--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@ description: > # this means to ignore newlines until "baseurl:"
   KNOT is een consulting en trainingbureau en helpt u om uw identiteit, 
   visie en missie te verbinden aan 
   bereikbare doelen en de hindernissen op uw pad te overwinnen.
-baseurl: "/" # the subpath of your site, e.g. /blog/
-url: "http://www.knot.consulting" # the base hostname & protocol for your site
+# baseurl: "/" # the subpath of your site, e.g. /blog/
+# url: "http://www.knot.consulting" # the base hostname & protocol for your site
 # twitter_username: jekyllrb
 # github_username:  jekyll
 
