--- a/_data/diensten.yml
+++ b/_data/diensten.yml
@@ -79,12 +79,12 @@
     </p>
 
     <p>
-      <strong>Een E-Coach doet dit op afstand en maakt gebruik van de elektronische digitale mogelijkheden van deze tijd.</strong>
+      <strong>Een e-coach doet dit op afstand en maakt gebruik van de elektronische digitale mogelijkheden van deze tijd.</strong>
     </p>
 
     <p>
-      E coachen via Email of Skype is een alternatief als afstand een obstakel, tijd een beperkende factor en agenda ruimte een belemmering is.
-      Een persoonlijke ontmoeting met de coach heeft altijd voorkeur en E-Coachen is een goed alternatief en ook geschikt voor de meeste coach onderwerpen.
+      E-coaching via e-mail of Skype is een alternatief als afstand een obstakel, tijd een beperkende factor en agendaruimte een belemmering is.
+      Een persoonlijke ontmoeting met de coach heeft altijd voorkeur. E-coaching is een goed alternatief en ook geschikt voor de meeste coaching-onderwerpen.
     </p>
     <p>
       Het heeft wel de voorkeur om de coach een keer in levende lijve te ontmoeten om het coachen via Skype effectiever te maken
