--- a/_data/diensten.yaml
+++ b/_data/diensten.yaml
@@ -40,7 +40,7 @@
       Het kan zomaar gebeuren dat je in de knoop raakt met jezelf, met een ander of een Ander. Het kan zijn dat je beschadigd bent geraakt, mentaal of geestelijk. Belangrijke levensgebeurtenissen als bijvoorbeeld geboorten of sterfgevallen, trouwen of scheiden, ander werk of verhuizen, ziekte of werkeloosheid kunnen je danig uit je evenwicht brengen.
       Zoals de coach kan helpen om de knoop te ontwarren,  zo kan de counselor helpen om zelf tot herstel te komen. Herstelprocessen kunnen kort zijn maar ook lang duren, afhankelijk hoe de verstoringen of beschadigingen zijn ontstaan en welke impact ze hebben gehad. De counselor helpt om tot herstel en genezing te komen of om te aanvaarden wat onveranderbaar is.
     </p>"
-  link:
+  link: /diensten/counseling/
 
 - name: Training
   slug: De weg van verandering
