added seperate data file for global meta keywords

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: > # this means to ignore newlines until "baseurl:"
   visie en missie te verbinden aan 
   bereikbare doelen en de hindernissen op uw pad te overwinnen.
 
-tags: overtuiging, missie, professioneel, droom, roeping, levensbeschouwing, ontwikkeling, advisering, counseling, coach, coachen, coaching, training, trainer, adviseur, christelijk, protestants, evangelisch, levensfase, persoonlijke begeleiding, organisatiecoach, teamcoach, groepscoach, relatiecoach, loopbaancoach, talentcoach, ontwikkelcoach
+#'overtuiging, missie, professioneel, droom, roeping, levensbeschouwing, ontwikkeling, advisering, counseling, coach, coachen, coaching, training, trainer, adviseur, christelijk, protestants, evangelisch, levensfase, persoonlijke begeleiding, organisatiecoach, teamcoach, groepscoach, relatiecoach, loopbaancoach, talentcoach, ontwikkelcoach'
 
 
 # baseurl: "/" # the subpath of your site, e.g. /blog/
