--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ description: > # this means to ignore newlines until "baseurl:"
 
 
 # baseurl: "/" # the subpath of your site, e.g. /blog/
-# url: "http://www.knot.consulting" # the base hostname & protocol for your site
+url: "https://www.knot.consulting" # the base hostname & protocol for your site
 # twitter_username: jekyllrb
 # github_username:  jekyll
 
