--- a/_data/diensten.yaml
+++ b/_data/diensten.yaml
@@ -72,19 +72,20 @@
   link: /diensten/spreken/
 
 - name: E-Coaching
-  slug: (In ontwikkeling)
+  slug:   online zelfcoach programma 
+  
   description: 
     "<p>
       <strong>Een goede coach helpt jou om van de plaats waar je nu bent te komen op de plaats waar je wilt zijn.</strong> 
     </p>
 
     <p>
-      <strong>Een e-coach doet dit op afstand en maakt gebruik van de elektronische digitale mogelijkheden van deze tijd.</strong>
+      <strong>Een e-coach doet dit op afstand en maakt gebruik van de online zelfcoachprogramma en/of andere digitale en electronische mogelijkheden van deze tijd.</strong>
     </p>
 
     <p>
-      E-coaching via e-mail of Skype is een alternatief als afstand een obstakel, tijd een beperkende factor en agendaruimte een belemmering is.
-      Een persoonlijke ontmoeting met de coach heeft altijd voorkeur. E-coaching is een goed alternatief en ook geschikt voor de meeste coaching-onderwerpen.
+      Een online zelfcoach programma is een ideaal middel om zelfstandig met een coachvraag aan de slag te gaan. Er is altijd uitbreiding mogelijk. Overschakelen naar E-coaching of een gewoon coachgesprek met de caoch is mogelijk. E-coaching via e-mail of Skype is een alternatief als afstand een obstakel, tijd een beperkende factor en agendaruimte een belemmering is.
+      Een persoonlijke ontmoeting met de coach heeft altijd voorkeur. E-coaching is een goed en goedkoper alternatief en ook geschikt voor de meeste coaching-onderwerpen.
     </p>
     <p>
       Het heeft wel de voorkeur om de coach een keer in levende lijve te ontmoeten om het coachen via Skype effectiever te maken
