--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@ title: KNOT
 subtitle: Kees Neven Ontwikkelt Toekomst
 email: info@knot.consulting
 description: > # this means to ignore newlines until "baseurl:"
-  KNOT is een consulting en trainingbureau en helpt u om uw identiteit, 
+  KNOT is een coaching en trainingbureau en helpt u om uw identiteit, 
   visie en missie te verbinden aan 
   bereikbare doelen en de hindernissen op uw pad te overwinnen.
 
-#'overtuiging, missie, professioneel, droom, roeping, levensbeschouwing, ontwikkeling, advisering, counseling, coach, coachen, coaching, training, trainer, adviseur, christelijk, protestants, evangelisch, levensfase, persoonlijke begeleiding, organisatiecoach, teamcoach, groepscoach, relatiecoach, loopbaancoach, talentcoach, ontwikkelcoach'
+#'overtuiging, missie, professioneel, droom, roeping, levensbeschouwing, ontwikkeling, transformissioneel, verbeelding, advisering, counseling, coach, coachen, coaching, training, trainer, adviseur, christelijk, protestants, evangelisch, levensfase, persoonlijke begeleiding, organisatiecoach, teamcoach, groepscoach, relatiecoach, loopbaancoach, talentcoach, ontwikkelcoach'
 
 
 # baseurl: "/" # the subpath of your site, e.g. /blog/
