--- a/_data/diensten.yaml
+++ b/_data/diensten.yaml
@@ -57,7 +57,7 @@
   link: /diensten/training/
 
 - name: Woongroepen
-  slug: Overdracht voor groei
+  slug: Veilig thuis
   description: 
     "<p><strong>Een woongroepcoach helpt individuen en groepen in het opzetten of het instandhouden van een groep met een gemeenschappelijk doel.</strong></p>
 
