--- a/_data/diensten.yaml
+++ b/_data/diensten.yaml
@@ -30,17 +30,17 @@
     </p>"
   link: /diensten/coaching/
 
-- name: Counseling
-  slug: De weg naar herstel
+- name: Bemoediging
+  slug: Kracht om op te staan
   description: 
     "<p>
-      <strong>Een goede counselor helpt je om jezelf weer terug te vinden bij ingrijpende gebeurtenissen.</strong>
+      <strong>Een bemoediging helpt je om jezelf weer terug te vinden en verder te gaan bij ingrijpende gebeurtenissen.</strong>
     </p>
     <p>
-      Het kan zomaar gebeuren dat je in de knoop raakt met jezelf, met een ander of een Ander. Het kan zijn dat je beschadigd bent geraakt, mentaal of geestelijk. Belangrijke levensgebeurtenissen als bijvoorbeeld geboorten of sterfgevallen, trouwen of scheiden, ander werk of verhuizen, ziekte of werkeloosheid kunnen je danig uit je evenwicht brengen.
-      Zoals de coach kan helpen om de knoop te ontwarren,  zo kan de counselor helpen om zelf tot herstel te komen. Herstelprocessen kunnen kort zijn maar ook lang duren, afhankelijk hoe de verstoringen of beschadigingen zijn ontstaan en welke impact ze hebben gehad. De counselor helpt om tot herstel en genezing te komen of om te aanvaarden wat onveranderbaar is.
+      De wereld is vol van het corona virus. Het kan zomaar een geliefde treffen. Of jezelf. Hierdoor kun je in de knoop raken omdat je geen goed antwoord op jouw levensvragen. Of je bent bang om ziek te worden en te sterven. Belangrijke levensgebeurtenissen als bijvoorbeeld geboorten of sterfgevallen, trouwen of scheiden, ander werk of verhuizen, ziekte of werkeloosheid kunnen je danig uit je evenwicht brengen.
+      De corona crisis kan dit zeker. Zoals de coach kan helpen om de knoop te ontwarren, zo kan je door een bemoediging verder helpen om zelf tot herstel te komen. Herstelprocessen kunnen kort zijn maar ook lang duren, afhankelijk hoe de verstoringen of beschadigingen zijn ontstaan en welke impact ze hebben gehad. De counselor helpt om tot herstel en genezing te komen of om te aanvaarden wat onveranderbaar is.
     </p>"
-  link: /diensten/counseling/
+  link: /diensten/bemoediging/
 
 - name: Training
   slug: De weg van verandering
