--- a/_data/diensten.yaml
+++ b/_data/diensten.yaml
@@ -1,5 +1,5 @@
 - name: Bemoediging
-  slug: Kracht om op te staan
+  slug: Tijdens de corona crisis
   description: 
     "<p>
       <strong>Een bemoediging helpt je om jezelf weer terug te vinden en verder te gaan bij ingrijpende gebeurtenissen.</strong>
