--- a/_data/diensten.yaml
+++ b/_data/diensten.yaml
@@ -1,12 +1,11 @@
-- name: Bemoediging
-  slug: Tijdens de corona crisis
+- name: Boek
+  slug: Vaders zonen
   description: 
     "<p>
-      <strong>Een bemoediging helpt je om jezelf weer terug te vinden en verder te gaan bij ingrijpende gebeurtenissen.</strong>
+      <strong>Dit boek helpt jou in de zoektocht naar je eigen hart.</strong>
     </p>
     <p>
-      De wereld is vol van het corona virus. Het kan zomaar een geliefde treffen. Of jezelf. Hierdoor kun je in de knoop raken omdat je geen goed antwoord op jouw levensvragen. Of je bent bang om ziek te worden en te sterven. Belangrijke levensgebeurtenissen als bijvoorbeeld geboorten of sterfgevallen, trouwen of scheiden, ander werk of verhuizen, ziekte of werkeloosheid kunnen je danig uit je evenwicht brengen.
-      De corona crisis kan dit zeker. Zoals de coach kan helpen om de knoop te ontwarren, zo kan je door een bemoediging verder helpen om zelf tot herstel te komen. Herstelprocessen kunnen kort zijn maar ook lang duren, afhankelijk hoe de verstoringen of beschadigingen zijn ontstaan en welke impact ze hebben gehad. De counselor helpt om tot herstel en genezing te komen of om te aanvaarden wat onveranderbaar is.
+       De zoektocht naar je eigen hart kan een leven lang duren, maar ook korter als je de weg weet te vinden en de stappen zet die onderen voor jou ontdekt hebben. Het eeuwenoude verhaal van de zoon naar zichzself, de vader en anderen wordt met praktische voorbeelden beschreven. Het boek is te bestellen op www.vaderszonen.nl
     </p>"
   link: /diensten/bemoediging/
 
