--- a/_data/diensten.yaml
+++ b/_data/diensten.yaml
@@ -64,12 +64,13 @@
 
     <ul>
       <li>het omzetten van een ideaal naar een goed functionerende woongroep.</li>
-      <li>het maken van beleid rondom selectie van groepsleden en het functioneren van een woongroep</li>
+      <li>het maken van beleid rondom selectie van groepsleden en het functioneren van een woongroep.</li>
       <li>het starten, de vorming en ontwikkeling van een groep.</li>
       <li>Het vormen van een hechte (woon)gemeenschap.</li>
       <li>Het in de praktijk brengen van visie en missie van de woongroep, vooral als het anders loopt dan de verwachting.</li>
       <li>Leren om met verschillen om te gaan.</li>
-      <li>Groepen die stageneren helpen om groepsprocessen om te buigen naar groei.</li>
+      <li>Groepen die stageneren helpen om groepsprocessen om te buigen naar groei.
+      </li>Coachen van de groepsynamische processsen.
     </ul>
 
     <p>De coaching kan kortdurend zijn rond een thema of langerdurend als externe steun voor de woongroep.</p>"
