--- a/_data/diensten.yaml
+++ b/_data/diensten.yaml
@@ -7,7 +7,7 @@
     <p>
        De zoektocht naar je eigen hart kan een leven lang duren, maar ook korter als je de weg weet te vinden en de stappen zet die onderen voor jou ontdekt hebben. Het eeuwenoude verhaal van de zoon naar zichzself, de vader en anderen wordt met praktische voorbeelden beschreven. Het boek is te bestellen op www.vaderszonen.nl
     </p>"
-  link: /diensten/bemoediging/
+  link: /diensten/boek/
 
 - name: Advies
   slug: Goede raad helpt om te kiezen
